@@ -6,46 +6,45 @@
 transport_type=multicast
 
 # Enable/disable IPv6 default group address selection.
-# The default value is 0 (disabled).
+# The default value is: 0 (disabled).
 default_to_ipv6=0
 
-# The offset used to determine default port numbers;
-# this value will be added to the transportId. The
-# default value is: 49400.
+# The offset used to determine default port numbers; this
+# value will be added to the Transport ID.
+# The default value is: 49400.
 port_offset=49400
 
-# The multicast group address from which to send and/or
-# receive data. The default group addresses are:
+# The multicast group to join.
+# The default value is:
 #   224.0.0.128:<port> (IPv4), and
 #    [FF01::80]:<port> (IPv6)
 group_address=224.0.0.128:49401
 
-# Enable/disable reliable communication. This option
-# will eventually be deprecated. The default value
-# is 1 (enabled).
+# Enable/disable reliable communication.
+# The default value is: 1 (enabled).
 reliable=1
 
 # The maximum number of milliseconds to wait between
 # handshake attempts during association (reliable only).
-# The default value is 500.
+# The default value is: 500.
 syn_interval=500
 
 # The maximum number of milliseconds to wait for a
-# SYNACK response during association (reliable only).
-# The default value is 30000 (30 seconds).
+# handshake response during association (reliable only).
+# The default value is: 30000 (30 seconds).
 syn_timeout=30000
 
+# The number of datagrams to retain in order to service
+# incoming repair requests (reliable only).
+# The default value is: 32.
+nak_depth=32
+
 # The maximum number of milliseconds to wait between
-# repair requests (reliable only). The default value
-# is 2000 (2 seconds).
+# repair requests (reliable only).
+# The default value is: 2000 (2 seconds).
 nak_interval=2000
 
 # The maximum number of milliseconds to wait before
-# giving up on a NAK response (reliable only). The
-# default value is 30000 (30 seconds).
+# giving up on a repair response (reliable only).
+# The default value is: 30000 (30 seconds).
 nak_timeout=30000
-
-# The number of DCPS datagrams to retain in order to
-# service incoming repair requests (reliable only).
-# The default value is 32.
-nak_repair_size=32
