@@ -532,7 +532,7 @@ TertiaryDark: #666
 Error: #f88
 </pre>
 </div>
-<div title="Configuration" modifier="StevenStallion" created="200912011939" modified="200912040330" changecount="29">
+<div title="Configuration" modifier="StevenStallion" created="200912011939" modified="200912051757" changecount="30">
 <pre>As with other transports, dynamic configuration is provided by the ACE Service Configurator Framework. A svc.conf file should be created which contains the following:
 {{{
 dynamic OpenDDS_DCPS_Multicast_Service Service_Object * OpenDDS_Multicast:_make_MulticastLoader()
@@ -550,49 +550,48 @@ Alternately, the transport may be statically loaded by including the {{{dds/DCPS
 A number of additional transport configuration options are available:
 {{{
 # Enable/disable IPv6 default group address selection.
-# The default value is 0 (disabled).
+# The default value is: 0 (disabled).
 default_to_ipv6=0
 
-# The offset used to determine default port numbers;
-# this value will be added to the transportId. The
-# default value is: 49400.
+# The offset used to determine default port numbers; this
+# value will be added to the Transport ID.
+# The default value is: 49400.
 port_offset=49400
 
-# The multicast group address from which to send and/or
-# receive data. The default group addresses are:
+# The multicast group to join.
+# The default value is:
 #   224.0.0.128:&lt;port&gt; (IPv4), and
 #    [FF01::80]:&lt;port&gt; (IPv6)
 group_address=224.0.0.128:49401
 
-# Enable/disable reliable communication. This option
-# will eventually be deprecated. The default value
-# is 1 (enabled).
+# Enable/disable reliable communication.
+# The default value is: 1 (enabled).
 reliable=1
 
 # The maximum number of milliseconds to wait between
 # handshake attempts during association (reliable only).
-# The default value is 500.
+# The default value is: 500.
 syn_interval=500
 
 # The maximum number of milliseconds to wait for a
-# SYNACK response during association (reliable only).
-# The default value is 30000 (30 seconds).
+# handshake response during association (reliable only).
+# The default value is: 30000 (30 seconds).
 syn_timeout=30000
 
+# The number of datagrams to retain in order to service
+# incoming repair requests (reliable only).
+# The default value is: 32.
+nak_depth=32
+
 # The maximum number of milliseconds to wait between
-# repair requests (reliable only). The default value
-# is 2000 (2 seconds).
+# repair requests (reliable only).
+# The default value is: 2000 (2 seconds).
 nak_interval=2000
 
 # The maximum number of milliseconds to wait before
-# giving up on a NAK response (reliable only). The
-# default value is 30000 (30 seconds).
+# giving up on a repair response (reliable only).
+# The default value is: 30000 (30 seconds).
 nak_timeout=30000
-
-# The number of DCPS datagrams to retain in order to
-# service incoming repair requests (reliable only).
-# The default value is 32.
-nak_repair_size=32
 }}}
 Default examples of these files are provided under the source directory (see: {{{$DDS_ROOT/dds/DCPS/transport/multicast/}}}).</pre>
 </div>
@@ -617,12 +616,12 @@ An FEC mechanism should be introduced to reduce repair requests and to provide a
 
 {{{DataLink}}}s should initiate the removal of an association based on changes in reliability (not currently supported by the ETF).</pre>
 </div>
-<div title="Known Issues" modifier="StevenStallion" created="200912012032" modified="200912022141" changecount="39">
+<div title="Known Issues" modifier="StevenStallion" created="200912012032" modified="200912051757" changecount="40">
 <pre>{{{TRANSPORT_PRIORITY}}} is not directly supported. This is partially due to routing restrictions placed on default group addresses as the selection heuristic assigns from the link-local range. Setting the TOS would provide little to no benefit for non-default group addresses at the cost of additional resources and complexity managing n-ary associations by priority key.
 
 Reliability must be configured via the {{{reliable}}} transport configuration option. The ETF currently multiplexes best-effort and reliable samples across the same {{{DataLink}}} which effectively disables autonegotiation of reliability between peers at the transport level.
 
-{{{nak_repair_size}}} must not exceed {{{16383}}} (2^^14^^-1) due to limits imposed by {{{OpenDDS::DCPS::SequenceNumber}}} comparisons (see: {{{$DDS_ROOT/dds/DCPS/Definitions.h}}}).
+{{{nak_depth}}} must not exceed {{{16383}}} (2^^14^^-1) due to limits imposed by {{{OpenDDS::DCPS::SequenceNumber}}} comparisons (see: {{{$DDS_ROOT/dds/DCPS/Definitions.h}}}).
 
 The current implementation relies on {{{LIVELINESS}}} to periodically send application-level heartbeat messages to aid in detecting reception gaps. If {{{AUTOMATIC_LIVELINESS_QOS}}} (the default) is not used, peers may not detect these gaps in a timely manner leading to unrecoverable data loss.
 
